Fix dev client launch on macOS JDK 11+ (export com.apple.eawt to run task)